2021-08-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCval.c (valCastLiteral): possibly fix bug #3273

2021-08-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  doc/sdccman.lyx,
	  .version:
	  Enable new calling convention for stm8.

2021-08-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  support/valdiag/tests/callingconvention.c:
	  Diagnostics for conflicting calling conventions.

2021-08-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c:
	  Fix buffer overflow reported in patch #397 by Arnout Engelen .

2021-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/main.c,
	  doc/sdccman.lyx:
	  .version:
	  Enable new calling convention for gbz80.

2021-08-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCglobl.h,
	  src/SDCCmain.c,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/ds390/main.c,
	  src/hc08/main.c,
	  src/mcs51/main.c,
	  src/pdk/main.c,
	  src/pic14/main.c,
	  src/pic16/main.c,
	  src/port.h,
	  src/stm8/gen.c,
	  src/stm8/main.c,
	  src/z80/gen.c,
	  src/z80/main.c:
	  Calling convention selection infrastructure from breaktheworld branch.

2021/07/28 Visenri

    * sim/ucsim/pdk.src/inst.cc
    Fix bug in pdk15 simulation (introduced in [r12557]).
    
2021/07/28 Visenri

    * support/regression/compact-results.py
      Fix parsing of test name.
      
2021/07/27 Visenri

    * src/pdk/gen.c
      support/regression/tests/getbyte_param.c
      Fix bug #3269.
      Add test for it.

2021/07/26 Visenri

    * support/regression/Makefile.in
      support/regression/ports/pdk13
      support/regression/ports/pdk13/spec.mk
      support/regression/ports/pdk13/support.c
      support/regression/ports/pdk13/uCsim.cmd
      Added infrastructure to test pdk13.
      It is in the filter-out list to avoid automatic test, because many tests still need some work to be passed/skipped [#394].

2021/07/26 Visenri
